Added Angular sources

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -66,6 +66,15 @@
                             <goal>install-node-and-npm</goal>
                         </goals>
                     </execution>
+                    <execution>
+					    <id>npm-install</id>
+					    <goals>
+					        <goal>npm</goal>
+					    </goals>
+					    <configuration>
+					    	<arguments>run-script build</arguments>
+					    </configuration>
+					</execution>
                 </executions>
             </plugin>
 		</plugins>
