--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -65,9 +65,9 @@
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
-					    <configuration>
-					    	<arguments>run-script build</arguments>
-					    </configuration>
+<!-- 					    <configuration> -->
+<!-- 					    	<arguments>run-script build</arguments> -->
+<!-- 					    </configuration> -->
                     </execution>
 <!--                     <execution> -->
 <!-- 					    <id>npm-install</id> -->
