--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -65,19 +65,16 @@
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
-<!-- 					    <configuration> -->
-<!-- 					    	<arguments>run-script build</arguments> -->
-<!-- 					    </configuration> -->
                     </execution>
-<!--                     <execution> -->
-<!-- 					    <id>npm-install</id> -->
-<!-- 					    <goals> -->
-<!-- 					        <goal>npm</goal> -->
-<!-- 					    </goals> -->
-<!-- 					    <configuration> -->
-<!-- 					    	<arguments>run-script build</arguments> -->
-<!-- 					    </configuration> -->
-<!-- 					</execution> -->
+                    <execution>
+					    <id>npm-install</id>
+					    <goals>
+					        <goal>npm</goal>
+					    </goals>
+					    <configuration>
+					    	<arguments>run-script build</arguments>
+					    </configuration>
+					</execution>
                 </executions>
             </plugin>
 		</plugins>
